--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,8 @@ h6 {
 }
 
 h1 {
-  font-size: 5rem;
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-size: 4rem;
   margin: 50px 20px;
   text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
@@ -63,7 +64,7 @@ h2 {
 }
 
 h3 {
-  font-family: 'Aladin', cursive;
+  font-family: var(--header-fonts);
   font-size: 1.75rem;
 }
 
@@ -202,6 +203,10 @@ nav li {
   cursor: pointer;
   text-shadow: 2px 2px 10px rgba(0,0,0, 0.5);
   margin: 0 40px;
+}
+
+.nav-links:hover {
+  text-shadow: 1px 1px orange;
 }
 
 ul.skills {
@@ -362,6 +367,10 @@ textarea {
 .navActive {
   color: var(--secondary);
   cursor: default;
+  text-shadow: 3px 3px 15px rgba(255,255,255, .5);
+}
+
+.navActive:hover {
   text-shadow: 3px 3px 15px rgba(255,255,255, .5);
 }
 
